src/styles/question.module.css
.main {
	display: flex;
	flex-direction: column;
	align-items: center;
	padding: 2rem;
	min-height: 100vh;
	background: linear-gradient(150deg, #ec1187, #ff8d10);
}

.wrapper {
	max-width: 640px;
}

.userContainer {
	border-top-left-radius: var(--radius);
	border-top-right-radius: var(--radius);
	padding: 1rem;
	background: var(--color-white);
	color: var(--color-black);
	display: flex;
	align-items: flex-start;
	max-width: 640px;
}

.questionTextArea {
	border-bottom-right-radius: var(--radius);
	border-bottom-left-radius: var(--radius);
	padding: 1rem;
	background: rgba(255, 255, 255, 0.4);
	outline: none;
	border: none;
	display: block;
	font-family: Arial, Helvetica, sans-serif;
	font-weight: bold;
	color: var(--color-black);
	font-size: 20px;
	min-width: 321px;
	max-width: 640px;
	width: 100%;
}

.questionTextArea::placeholder {
	color: rgba(0, 0, 0, 0.4);
}

.emojiContainer {
	background-color: black;
	width: 40px;
	height: 40px;
	border-radius: 50%;
	display: flex;
	justify-content: center;
	align-items: center;
	font-size: 24px;
	margin-right: 8px;
}

.userContainer p,
.userContainer h4 {
	margin-block-end: 0px;
	margin-block-start: 0px;
}

.qA {
	text-align: center;
	font-weight: 300;
	font-size: 14px;
}
.button {
	background-color: var(--color-black);
	border-radius: 3rem;
	padding: 1.5rem 1rem;
	display: block;
	margin-top: 2rem;
	outline: none;
	border: none;
	width: 100%;
	margin-right: 0px;
	font-weight: bold;
	font-size: 16px;
	cursor: pointer;
}

.button:disabled {
	cursor: not-allowed;
	background-color: rgba(0, 0, 0, 0.4);
}

